common/base/network-policies/allow-coredns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-coredns
spec:
  egress:
  - ports:
    - protocol: UDP
      port: 53
    to:
    - namespaceSelector:
        matchLabels:
          name: kube-system
  podSelector: {}
  policyTypes:
  - Egress
