common/base/network-policies/allow-sidecar.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-allow-coredns
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: istio-system
  podSelector: {}
  policyTypes:
  - Egress
